--- a/project.ipynb
+++ b/project.ipynb
@@ -22,6 +22,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee15e222-f2fa-48a8-80b8-3817b293ff4d",
+   "metadata": {},
+   "source": [
+    "For our data collection, we recorded the traffic from four different WhatsApp Web groups, each exhibiting distinct characteristics: \n",
+    "\n",
+    "Group A: Only picture messages were sent within this group.<br>\n",
+    "Group B: Only long text messages were exchanged in this group.<br>\n",
+    "Group C: This group contained only video file transfers between members.<br>\n",
+    "Group D: Audio files were the sole media type sent in this group.<br>\n",
+    "This diversity in group traffic composition allowed us to analyze whether unique fingerprints emerged in the timing and size patterns for different content types.<br>\n",
+    "\n",
+    "Additionally, we captured a second dataset from Group A. In this new capture, while still only sending pictures, we added background \"noise\" by streaming music on Spotify concurrently.<br> By comparing this noisy capture to the initial clean Group A traffic, we could examine the impact of mixed media streams on identifying underlying messaging patterns.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c308f50a-8c0c-4ae5-b0f9-489df16f63bb",
    "metadata": {},
    "source": [
@@ -200,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "id": "3865c6f3-5df4-4be9-9b05-76977b603afd",
    "metadata": {},
    "outputs": [
@@ -380,7 +396,7 @@
        "[4750 rows x 7 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "id": "4a511c97-ce74-43da-96c9-3c364bbb5463",
    "metadata": {},
    "outputs": [
@@ -422,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 38,
    "id": "c09f7755-e808-4c7d-be42-61160499d016",
    "metadata": {},
    "outputs": [
@@ -602,7 +618,7 @@
        "[665 rows x 7 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 39,
    "id": "eb144696-588b-40a6-8d36-e5c3f404115b",
    "metadata": {},
    "outputs": [
@@ -651,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 41,
    "id": "72c982a3-2913-4c5c-bbb0-3a67346cec9c",
    "metadata": {},
    "outputs": [
@@ -756,7 +772,7 @@
        "4                                   Application Data  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +784,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
+   "id": "a86640e0-236c-4bef-b60d-a2266ab342b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "9f02287d-159b-4b96-97e1-2d24f9ceeff9",
    "metadata": {},
    "outputs": [
@@ -795,6 +819,14 @@
     "plt.title('Time vs Length')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caaa0073-953c-4d6b-bd45-ace9cc5b6297",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -969,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "8538a507-864c-431d-8deb-fa17e2e5f0a8",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1106,7 @@
        "4  45474  >  443 [ACK] Seq=1 Ack=368 Win=1015 Len...  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,42 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "54840501-25bd-4331-bb54-9f3c3c3ef0b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Protocol\n",
-       "TCP        385\n",
-       "TLSv1.2    250\n",
-       "MDNS       123\n",
-       "ICMPv6      82\n",
-       "DNS         56\n",
-       "QUIC        26\n",
-       "SSDP        16\n",
-       "IGMPv2      10\n",
-       "ARP          4\n",
-       "HTTP         4\n",
-       "IGMPv3       3\n",
-       "BROWSER      2\n",
-       "NTP          2\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_data['Protocol'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "id": "9d85ed32-5cfa-4715-8dd2-394d7689598b",
    "metadata": {},
    "outputs": [
@@ -1151,41 +1148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "id": "13cb8beb-4062-4730-adf3-a84186b2ef6d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['0-9',\n",
-       " '10-19',\n",
-       " '20-29',\n",
-       " '30-39',\n",
-       " '40-49',\n",
-       " '50-59',\n",
-       " '60-69',\n",
-       " '70-79',\n",
-       " '80-89',\n",
-       " '90-99',\n",
-       " '100-109']"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_bins=[]\n",
     "for i in range(0, 101, 10):\n",
-    "    my_bins.append(f\"{i}-{i+9}\")\n",
-    "my_bins"
+    "    my_bins.append(f\"{i}-{i+9}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "id": "22dbc4fd-bcb3-41c6-b3d5-9df2d338f6e7",
    "metadata": {},
    "outputs": [
@@ -1365,20 +1340,20 @@
        "[230 rows x 7 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#filtered length lower than 300 because it is likely to be noise\n",
+    "#filtered length lower than 100 because it is likely to be noise\n",
     "new_filtered = text_data_filtered.loc[text_data_filtered['Length'] > 100]\n",
     "new_filtered"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "id": "746cad0c-bf23-47d9-877e-9d83bb81fda8",
    "metadata": {},
    "outputs": [
@@ -1406,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "1d62f206-77e7-40c3-8fea-771542c888ff",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1402,7 @@
        "Name: Time, Length: 230, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,8 +1414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "c10a43f1-5d6b-417b-bc26-b0a01167eb1d",
+   "execution_count": 51,
+   "id": "1160ed73-4f14-42f2-a6ca-533fb1e25da1",
    "metadata": {},
    "outputs": [
     {
@@ -1466,26 +1441,26 @@
     "\n",
     "# Title\n",
     "plt.title('Histogram of Time Differences')\n",
-    "\n",
     "# Show plot\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "62016330-bf79-46f3-b0cb-7d789cf1c0b6",
+   "id": "ad777727-926e-42eb-bb54-f3eb74289608",
    "metadata": {},
    "source": [
+    "To determine which data can be considered noise and filtered out,<br>\n",
+    "we conducted an experiment where we recorded the transmission of the smallest message size within the group.<br>\n",
+    "This experiment was performed twice, in two separate trials.\n",
     "\n",
-    "To determine which data can be considered noise and filtered out, we conducted an experiment where we recorded the transmission of the smallest message size within the group. This experiment was performed twice, in two separate trials.\n",
-    "\n",
-    "The data graphs from the experiment showed that any packets with a size less than 100 bytes were extraneous to the message transmission. Based on these results, we can conclude that packets under 100 bytes can be assumed to be network noise unrelated to the core messages. Therefore, packets smaller than 100 bytes can be safely filtered out without losing meaningful message data."
+    "The data graphs from the experiment showed that any packets with a size less than 100 bytes were extraneous to the message transmission.<br> Based on these results, we can conclude that packets under 100 bytes can be assumed to be network noise unrelated to the core messages.<br> Therefore, packets smaller than 100 bytes can be safely filtered out without losing meaningful message data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "4ea2b27a-01e1-4a15-8d45-f887029f3ab3",
+   "execution_count": 54,
+   "id": "b964a048-230a-4b5c-9bfa-95fecc39a3ab",
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1540,7 @@
        "2                                   Application Data  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,8 +1554,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "f1d2f4f2",
+   "execution_count": 55,
+   "id": "70977334-a3af-4a54-b80b-3be8029a419b",
    "metadata": {},
    "outputs": [
     {
@@ -1660,12 +1635,13 @@
        "2                                   Application Data  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "smallest_text_check2 = pd.read_csv(\"smallest_text_data2.csv\", encoding='latin-1')\n",
     "smallest_text_check2.head(3)"
    ]
