--- a/src/project.ipynb
+++ b/src/project.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f4e1435f-860e-44a4-b9ac-b985f9aeeab7",
+   "metadata": {},
+   "source": [
+    "### Computer Networks Final Project:\n",
+    "\n",
+    "        Submitted by: \n",
+    "        Avi Ost - 3275665456546545645456 \n",
+    "        Noa Amichai - 206996381 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c062c942-148b-4796-ab20-52a62c6ead60",
