--- a/src/project.ipynb
+++ b/src/project.ipynb
@@ -3087,12 +3087,32 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16df3175-a0fb-48bb-a537-e032b8fe0c53",
+   "cell_type": "markdown",
+   "id": "1ffe09cc-311c-46bb-8cad-2a43c9516b5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Based on the statistics for the packet length distribution across the different data types, we can make the following observations:\n",
+    "\n",
+    "For the Pictures Data:\n",
+    "The average packet length is 617 bytes, with a high standard deviation, indicating a wide range of packet sizes.\n",
+    "The maximum packet length is 2022 bytes, showing there are very large packets likely corresponding to high-resolution images.\n",
+    "There is a large gap between the median (229 bytes) and 75th percentile (1304 bytes), pointing to some very large outliers.\n",
+    "\n",
+    "For the Voice Data:\n",
+    "The average packet length is smaller at 379 bytes, with a lower standard deviation, showing more consistently sized packets.\n",
+    "The maximum length is 1112 bytes, much smaller than the pictures data.\n",
+    "The median and percentiles are more evenly spaced, reflecting less variability.\n",
+    "\n",
+    "For the Video Data:\n",
+    "It has the highest average length (899 bytes) and very high variability (std dev of 998 bytes).\n",
+    "The maximum packet size is 2848 bytes, which makes sense for video content.\n",
+    "\n",
+    "For the Text Data:\n",
+    "The average length is small (336 bytes) but the maximum reaches 2848 bytes.\n",
+    "Overall the metrics reflect generally smaller but somewhat variable packet sizes.\n",
+    "\n",
+    "In summary, we can characterize pictures as having very large and highly variable packets, voice as more consistently medium-small packets, video as large on average with high variability, and text as small but somewhat variable sizes. The statistics reflect the unique profiles of each data type."
+   ]
   },
   {
    "cell_type": "code",
