--- a/src/project.ipynb
+++ b/src/project.ipynb
@@ -3093,25 +3093,28 @@
    "source": [
     "Based on the statistics for the packet length distribution across the different data types, we can make the following observations:\n",
     "\n",
-    "For the Pictures Data:\n",
-    "The average packet length is 617 bytes, with a high standard deviation, indicating a wide range of packet sizes.\n",
-    "The maximum packet length is 2022 bytes, showing there are very large packets likely corresponding to high-resolution images.\n",
-    "There is a large gap between the median (229 bytes) and 75th percentile (1304 bytes), pointing to some very large outliers.\n",
+    "For the Pictures Data: The average packet length is 617 bytes, with a high standard deviation, indicating a wide range of packet sizes. The maximum packet length is 2022 bytes, showing there are very large packets likely corresponding to high-resolution images. There is a large gap between the median (229 bytes) and 75th percentile (1304 bytes), pointing to some very large outliers.\n",
     "\n",
-    "For the Voice Data:\n",
-    "The average packet length is smaller at 379 bytes, with a lower standard deviation, showing more consistently sized packets.\n",
-    "The maximum length is 1112 bytes, much smaller than the pictures data.\n",
-    "The median and percentiles are more evenly spaced, reflecting less variability.\n",
+    "For the Voice Data: The average packet length is smaller at 379 bytes, with a lower standard deviation, showing more consistently sized packets. The maximum length is 1112 bytes, much smaller than the pictures data. The median and percentiles are more evenly spaced, reflecting less variability.\n",
     "\n",
-    "For the Video Data:\n",
-    "It has the highest average length (899 bytes) and very high variability (std dev of 998 bytes).\n",
-    "The maximum packet size is 2848 bytes, which makes sense for video content.\n",
+    "For the Video Data: It has the highest average length (899 bytes) and very high variability (std dev of 998 bytes). The maximum packet size is 2848 bytes, which makes sense for video content.\n",
     "\n",
-    "For the Text Data:\n",
-    "The average length is small (336 bytes) but the maximum reaches 2848 bytes.\n",
-    "Overall the metrics reflect generally smaller but somewhat variable packet sizes.\n",
+    "For the Text Data: The average length is small (336 bytes) but the maximum reaches 2848 bytes. Overall the metrics reflect generally smaller but somewhat variable packet sizes.\n",
     "\n",
-    "In summary, we can characterize pictures as having very large and highly variable packets, voice as more consistently medium-small packets, video as large on average with high variability, and text as small but somewhat variable sizes. The statistics reflect the unique profiles of each data type."
+    "In summary, we can characterize pictures as having very large and highly variable packets, voice as more consistently medium-small packets, video as large on average with high variability, and text as small but somewhat variable sizes. The statistics reflect the unique profiles of each data type.\n",
+    "\n",
+    "### //another option\n",
+    "Based on the statistics tables for the packet length distribution of pictures, voice, video, and text data, we can make the following observations:\n",
+    "\n",
+    "For pictures:\n",
+    "\n",
+    "The average packet length is around 617 bytes, with a high standard deviation, indicating a wide variety of image sizes. The maximum packet length is over 2kB, which corresponds to very large image files. There is a large gap between the median (229 bytes) and 75th percentile (1.3kB), showing many smaller images but some very large outliers. For voice:\n",
+    "\n",
+    "A relatively low average packet length of 379 bytes, with a standard deviation of 313 bytes, reflects consistently small audio packets. The maximum is just over 1kB, confirming there are no very long audio packets. A tight distribution around the median of 181 bytes indicates consistently small packet sizes. For video:\n",
+    "\n",
+    "An average packet length of 899 bytes indicates predominantly large packets for video chunks. The very high max and standard deviation show a wide range of video packet sizes. The median is lower at 363 bytes with a high 75th percentile, reflecting variability in encoding. For text:\n",
+    "\n",
+    "The low average packet length of 336 bytes and tight distribution confirms small packets for textual data. The maximum length of 2.8kB suggests some large outliers but generally bounded small packets. In summary, we can characterize pictures as variable with some large outliers, voice/text as consistently small, and video as large but highly variable packet sizes.ג"
    ]
   },
   {
@@ -3190,6 +3193,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "876c5a04-a98e-4f18-b1b1-765a7ee8cb2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4760e58f-0c7e-41ac-bf1f-d9e1cab77ef2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "263c0434-f622-44ea-852f-f6e084b7ccce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "07589c71-f345-42bd-a037-866009ff397d",
    "metadata": {},
    "outputs": [],
@@ -3220,7 +3247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
